fixed double border

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -78,6 +78,26 @@ header {
 }
 
 
+// ! address style
+
+div.tt-search-box-input-container{
+    border-radius: 0.375rem;
+    padding: 0 10px;
+
+    div svg{
+        margin: 0.375rem 0;
+    }
+
+    input#address{
+        border: none;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+    }
+}
+
+
+
 // EDIT CREATE FORM STYLE
 form .card {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
